<resources>
    <string name="app_name">AppStructural</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="import_dxf_title">Importar Archivo DXF</string>
    <string name="select_dxf_file">Seleccionar Archivo DXF</string>
    <string name="processing_file">Procesando archivo...</string>
    <string name="file_imported_successfully">Archivo importado exitosamente.</string>
    <string name="file_selection_cancelled">Selección de archivo cancelada.</string>
    <string name="error_reading_file">Error al leer el archivo: %1$s</string>
    <string name="error_empty_file">Error: El archivo seleccionado está vacío.</string>
    </resources>

<resources>
    <string name="edit_structure_title">Editar Estructura</string>
    <string name="add_node">Añadir Nodo</string>
    <string name="add_element">Añadir Elemento</string>
    <string name="select_mode">Seleccionar</string>
    <string name="move_node">Mover Nodo</string>
    <string name="delete_element">Eliminar Elemento</string>
    <string name="save_changes">Guardar Cambios</string>
    <string name="undo">Deshacer</string>
    <string name="redo">Rehacer</string>
</resources>

<resources>
    <string name="materials_title">Materiales</string>
    <string name="add_material">Añadir Material</string>
    <string name="assign_material">Asignar Material</string>
</resources>

<resources>
    <string name="sections_title">Secciones</string>
    <string name="add_section">Añadir Sección</string>
    <string name="assign_section">Asignar Sección</string>
</resources>

<resources>
    <string name="loads_boundaries_title">Cargas y Apoyos</string>
    <string name="add_load">Añadir Carga</string>
    <string name="add_boundary_condition">Añadir Apoyo</string>
</resources>

<resources>
    <string name="analysis_title">Análisis Estructural</string>
    <string name="analyze">Realizar Análisis</string>
    <string name="analyzing">Analizando...</string>
</resources>

<resources>
    <string name="results_title">Resultados del Análisis</string>
</resources>

<resources>
    <string name="export_dxf_title">Exportar a DXF</string>
    <string name="export_geometry">Incluir Geometría</string>
    <string name="export_deformations">Incluir Deformaciones</string>
    <string name="export_stresses">Incluir Tensiones</string>
    <string name="file_name">Nombre del Archivo</string>
    <string name="export">Exportar</string>
    <string name="enter_file_name">Por favor, introduce un nombre de archivo.</string>
</resources>

<resources>
    <string name="error_no_structure_found">Error: No se encontraron nodos o elementos en el archivo DXF.</string>
</resources>
